--- a/token-lending/cli/Cargo.toml
+++ b/token-lending/cli/Cargo.toml
@@ -10,14 +10,14 @@ version = "0.1.0"
 
 [dependencies]
 clap = "=2.34.0"
-solana-clap-utils = "=1.9.18"
-solana-cli-config = "=1.9.18"
-solana-client = "=1.9.18"
-solana-logger = "=1.9.18"
-solana-sdk = "=1.9.18"
-solana-program = "=1.9.18"
+solana-clap-utils = "~1.10.29"
+solana-cli-config = "~1.10.29"
+solana-client = "~1.10.29"
+solana-logger = "~1.10.29"
+solana-sdk = "~1.10.29"
+solana-program = "~1.10.29"
 solend-program = { path="../program", features = [ "no-entrypoint" ] }
-spl-token = { version = "3.2.0", features=["no-entrypoint"] }
+spl-token = { version = "3.3.0", features=["no-entrypoint"] }
 
 [[bin]]
 name = "solend-program"
