--- a/token-lending/program/Cargo.toml
+++ b/token-lending/program/Cargo.toml
@@ -16,9 +16,9 @@ arrayref = "0.3.6"
 bytemuck = "1.5.1"
 num-derive = "0.3"
 num-traits = "0.2"
-solana-program = "=1.9.18"
-spl-token = { version = "3.2.0", features=["no-entrypoint"] }
-switchboard-v2 = "0.1.3"
+solana-program = "~1.10.29"
+spl-token = { version = "3.3.0", features=["no-entrypoint"] }
+switchboard-v2 = "=0.1.12"
 thiserror = "1.0"
 uint = "=0.9.1"
 
@@ -27,8 +27,8 @@ assert_matches = "1.5.0"
 base64 = "0.13"
 log = "0.4.14"
 proptest = "1.0"
-solana-program-test = "=1.9.18"
-solana-sdk = "=1.9.18"
+solana-program-test = "~1.10.29"
+solana-sdk = "~1.10.29"
 serde = "1.0"
 serde_yaml = "0.8"
 
